scss/bootstudio.scss
#page {
    margin-top: 60px;
  }
  
  .navbar-main {
    height: 60px;
    padding-top: 0;
    padding-bottom: 0;
    background-color: white;
  }
  
  @media (min-width: 300px) {
    .main-page-container {
      min-width: 300px;
      padding-left: 0px;
      padding-right: 0px;
      padding-top: 0px;
    }
  }
  
  @media (min-width: 576px) {
    .main-page-container {
      min-width: 576px;
      padding-left: 0px;
      padding-right: 0px;
      
    }
  }
  
  @media (min-width: 768px) {
    .main-page-container {
      min-width: 768px;
      padding-left: 0px;
      padding-right: 0px;
      padding-top: 10px;
    }
  }
  
  @media (min-width: 992px) {
    .main-page-container {
      min-width: 992px;
      margin-top: 10px;
      padding-left: 3em;
      padding-right: 3em;
    }
  }
  

  
  @media (min-width: 576px) {
    .main-page-jumbo-main {
      border-radius: 0px;
      max-width: 576px;
    }
  }
  
  @media (min-width: 1200px) {
    .main-page-jumbo-main {
      border-radius: 12px;
      min-height: 400px;
    }
  }
  
  @media (min-width: 300px) {
    .main-page-jumbo-main {
      max-height: 300px;
      min-width: 100%;
      border-radius: 0px;
    }
  }
  
  @media (min-width: 300px) {
    .main-page-main-image {
      min-height: 300px;
      object-fit: cover;
      object-position: right;
    }
  }
  
  @media (min-width: 1200px) {
    .main-page-main-image {
      min-height: 400px;
      max-height: 400px;
      border-radius: 0;
    }
  }
  
  .main-page-main-image {
    filter: brightness(0.8);
  }

  .main-page-main-image .modal{
    filter: brightness(0.95)!important;
  }

  .main-page-container {
    padding-bottom: 10px;
  }
  
  .category-description{
    padding-top: 0px!important;
    padding-bottom: 0px !important;
  }

  @media (min-width: 768px) {
    .main-page-col {
      padding-left: 0px;
      padding-right: 0px;
    }
  }
  
  @media (min-width: 992px) {
    .main-page-col {
      /*padding-right: 10px!important;*/
    }
  }
  
  .parallax {
    background-attachment: scroll;
    /*height: 1000px;*/
  }
  
  video {
    width: 100%;
    position: fixed;
    top: 0;
    z-index: -999;
    height: 1000px;
    object-fit: cover;
    filter: brightness(0.5);
  }
  
  .fit-cover.aboout-page-main-image {
  }
  
  .fit-cover.aboout-page-main-image {
    display: block;
  }
  
  .fit-cover.aboout-page-main-image {
    display: none;
  }
  
  @media (min-width: 768px) {
    .fit-cover.aboout-page-main-image {
      display: block;
    }
  }
  
  @media (min-width: 768px) {
    .about-page-main-image {
      display: block!important;
    }
  }
  
  .about-page-main-image {
    /*display: none;*/
  }
  
  .about-page-main-image {
    display: none;
  }
  
  .accordion-card-about {
    border: none;
  }
  
  .accordion-heading:hover {
    text-decoration: none;
    color: var(--secondary)!important;
  }
  
  .accordion-heading {
    color: var(--primary);
  }
  
  .main-page-calendar-item {
  }
  
  .main-page-calendar-date {
    background-color: var(--primary);
    color: white;
    padding-left: 1em;
    padding-right: 1em;
  }
  
  .main-page-sub-card-img {
    object-fit: cover;
    filter: brightness(0.7);
  }

  .section-page-sub-card-img{
    object-fit: cover;
    filter: brightness(0.7);
    height: 100%;
  }

  .section-page-sub-card{

    height: 90%;
  }

  .section-page-top-cont{
    max-height: 350px;
    overflow: hidden;
  }
  
  @media (min-width: 1200px) {
    .main-page-sub-card-img {
      /*max-height: 150px;*/
    }
  }
  
  @media (min-width: 768px) {
    .main-page-sub-card-img {
      min-height: 150px;
      max-height: 150px!important;
    }
  }
  
  @media (min-width: 300px) {
    .main-page-sub-card-img {
      min-height: 250px;
      max-height: 250px;
    }
  }
  
  .main-page-sub-list-group-item {
    border: none;
    border-style: none!important;
    border-bottom: 1px solid rgba(51,102,103,0.3)!important;
  }
  
  @media (min-width: 1200px) {
    .main-page-col.main-page-sec-col {
      min-height: 400px;
    }
  }
  
  @media (min-width: 768px) {
    .main-page-col.main-page-sec-col {
      max-height: 300px;
    }
  }
  
  .main-page-sec-image {
    object-fit: cover;
    /*object-position: right;*/
    width: 100%;
    height: 100%;
    overflow: hidden;
  }

  .categorylist-image{
    object-fit: cover;
    object-position: center;
    width: 100%;
    height: 200px;
    overflow: hidden;
  }

  .categorylist-text{
    text-align: left;
    max-height: 100px;
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: normal;
    display: -webkit-box!important;
    -webkit-line-clamp: 3;
    -webkit-box-orient: vertical;
  }

  .related-image {
    object-fit: cover;
    /*object-position: right;*/
    width: 100%;
    height: 150px;
    overflow: hidden;
  }
  
  .fit-cover.main-page-course-card-img {
    display: none!important;
  }
  
  @media (min-width: 768px) {
    .fit-cover.main-page-course-card-img {
      display: block!important;
      height: 150px;
    }
  }
  
  .journal-card {
    font-size: small;
    border: none;
  }
  
  .journal-card-title {
    font-size: 1rem;
  }
  
  @media (min-width: 768px) {
    .course-card-secondary-img-cont {
      display: none;
    }
  }
  
  .course-card-secondary-img {
    height: 100%;
    width: 100%;
    object-fit: cover;
    object-position: center;
  }
  
  @media (min-width: 768px) {
    .journal-card-title {
      /*font-size: 1.5rem;*/
    }
  }
  
  .course-card-title {
    font-size: medium;
    min-height: 70px;
    max-height: 70px;
    overflow: hidden;
  }
  
  @media (min-width: 992px) {
    .course-card-title {
      font-size: 1.2rem;
      text-overflow: ellipsis;
      white-space: nowrap;
    }
  }
  
  @media (min-width: 1200px) {
    .course-card-title {
      font-size: 1.5rem;
    }
  }
  
  .main-page-col.main-page-sec-col {
  }
/* ... */

